# WeSpy

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: manual-brief-verification.md  manual-phase1-verification.md
tests/: test_briefing.py  test_domain_subscriptions.py  test_extraction_profiles.py  test_normalization.py  test_ocr_merge_persistence.py  test_wechat_unavailable_detection.py
wespy/: __init__.py  briefing.py  extraction_profiles.py  juejin.py  main.py  ocr.py  pdf_export.py  subscriptions.py
wespy-fetcher/: README.md  SKILL.md
wespy-fetcher/scripts/: wespy_cli.py
wespy/profiles/: default.json
wespy/profiles/wechat/: chima.json
