[build-system]
requires = ["setuptools>=77", "wheel", "setuptools_scm[toml]>=6.2", "packaging>=24.2"]
build-backend = "setuptools.build_meta"

[project]
name = "wespy-plus"
version = "0.3.0"
description = "A Markdown-focused article fetcher with WeChat subscriptions, OCR, and PDF export"
readme = "README.md"
requires-python = ">=3.6"
license = "MIT"
authors = [
    {name = "wespy-plus contributors"}
]
keywords = ["web scraping", "article extraction", "markdown converter", "weixin"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Text Processing :: Markup :: HTML",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.20.0",
    "beautifulsoup4>=4.9.0",
]

[project.urls]
"Homepage" = "https://github.com/whynpc9/WeSpy"
"Bug Reports" = "https://github.com/whynpc9/WeSpy/issues"
"Source" = "https://github.com/whynpc9/WeSpy"

[project.scripts]
wespy-plus = "wespy.__main__:main"
wespy = "wespy.__main__:main"

[tool.setuptools.packages.find]
include = ["wespy*"]
